kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sudo-server
    role: server
  name: sudo-server
spec:
  ports:
  - name: http
    port: 8090
    protocol: TCP
    targetPort: web
  selector:
    app: sudo-server
    role: server
  type: ClusterIP
